# NMF

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
experiments/: run_experiments.py
src/: NMF.py  NonNegMatrix.py  SepNMF.py
src/examples/: example_feature_extarction.py  example_topics_extarction.py
src/nmf/: NMF.py  NonNegMatrix.py  SepNMF.py  __init__.py
src/utils/: Data_Gen.py  __init__.py  affichage.py  beta_divergence.py  display.py  measure_sparsity.py
tests/: beta_divergence_plot.py  test_beta_divergence.py
